test/tests/compiler/5_local_variables/invalid_parse/plx1_type_before_var_2.plx
pub fn main(none) i32 {
    i32 a = 2
}
